@@ -293,10 +293,21 @@ if test "$enable_tabletdev" != "no"; then
 	fi
 fi
 
+dnl Check for dlloader
+WCM_OPTION_DLLOADER=no
+AC_ARG_ENABLE(dlloader,
+AC_HELP_STRING([--enable-dlloader], [Use dlloader  [[default=no]]]),
+	, enable_dlloader=no)
+if test "$enable_dlloader" != "no"; then
+	WCM_OPTION_DLLOADER=yes
+fi
+
+AM_CONDITIONAL(WCM_DLLOADER, test "$WCM_OPTION_DLLOADER" == "yes")
+
 dnl Check for wacomdrv build
 WCM_OPTION_WACOMDRV=no
 AC_ARG_ENABLE(wacomdrv,
-AC_HELP_STRING([--enable-wacomdrv], [Enable building wacom_drv.o [[default=yes]]]),
+AC_HELP_STRING([--enable-wacomdrv], [Enable building wacom_drv.{o,so} [[default=yes]]]),
 	, enable_wacomdrv=yes)
 if test "$enable_wacomdrv" != "no"; then
 	if test "$WCM_ENV_XF86" != "yes" && test "$WCM_ENV_XORGSDK" != "yes"; then
@@ -307,8 +318,13 @@ if test "$enable_wacomdrv" != "no"; then
 		echo "***"
 	else
 		WCM_OPTION_WACOMDRV=yes
-		WCM_XF86MODULES="$WCM_XF86MODULES wacom_drv.o"
-		WCM_EXPMODULES="$WCM_EXPMODULES wacom_drv.o"
+		if test "$WCM_OPTION_DLLOADER" == "yes" ; then
+			WCM_XF86MODULES="$WCM_XF86MODULES wacom_drv.so"
+			WCM_EXPMODULES="$WCM_EXPMODULES wacom_drv.so"
+		else
+			WCM_XF86MODULES="$WCM_XF86MODULES wacom_drv.o"
+			WCM_EXPMODULES="$WCM_EXPMODULES wacom_drv.o"
+		fi
 	fi
 fi
 
@@ -333,18 +349,6 @@ if test "$enable_xserver64" != "no"; then
 		WCM_KSTACK="-mpreferred-stack-boundary=4 -mcmodel=kernel"
 	fi
 fi
-
-dnl Check for dlloader
-WCM_OPTION_DLLOADER=no
-AC_ARG_ENABLE(dlloader,
-AC_HELP_STRING([--enable-dlloader], [Use dlloader  [[default=no]]]),
-	, enable_dlloader=no)
-if test "$enable_dlloader" != "no"; then
-	CFLAGS="$CFLAGS -fPIC"
-	WCM_OPTION_DLLOADER=yes
-fi
-
-AM_CONDITIONAL(WCM_DLLOADER, test "$WCM_OPTION_DLLOADER" == "yes")
 
 dnl Check for modver
 AC_ARG_ENABLE(modver,
@@ -552,7 +556,13 @@ echo "            evdev.o - $WCM_OPTION_EVDEV"
 echo "         mousedev.o - $WCM_OPTION_MOUSEDEV"
 echo "            input.o - $WCM_OPTION_INPUT"
 echo "        tabletdev.o - $WCM_OPTION_TABLETDEV"
+if test "$WCM_OPTION_DLLOADER" == "yes" ; then
+echo "       wacom_drv.so - $WCM_OPTION_WACOMDRV $WCM_PATCH_WACOMDRV"
+echo "        wacom_drv.o - no"
+else
+echo "       wacom_drv.so - no"
 echo "        wacom_drv.o - $WCM_OPTION_WACOMDRV $WCM_PATCH_WACOMDRV"
+fi
 echo "----------------------------------------"
 
 dnl Check for x86_64 kernel
